fase 3 desarrollado complemente

--- a/admin/assets/css/custom-admin.css
+++ b/admin/assets/css/custom-admin.css
@@ -143,6 +143,12 @@
     color: white;
 }
 
+.nav-treeview {
+    padding-left: 10px !important;
+    font-size: 14px !important;
+}
+
+
 /* Formularios */
 .form-control {
     border-radius: 6px;
